--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>pinto</h1>
-</body>
+<body><p>michael</p>
+    <h1>pinto</h1
+        
 </html>
